@@ -27,18 +27,12 @@ public class Match {
 
 		for (String rawMessage : matchInfo) {
 
-			final long time = getMessageTime(rawMessage);
-			final String messageText = getMessageText(rawMessage);
-			Message message = new Message(name, time, messageText);
+			final String timeString = getTime(rawMessage);
+			final long time = parseTime(timeString);
+			final String messageString = getMessage(rawMessage);
+			Message message = new Message(name, time, messageString, timeString);
 			updates.add(message);
 		}
-	}
-
-	private long getMessageTime(String rawMessage) {
-
-		String timeString = getTime(rawMessage);
-		long time = parseTime(timeString);
-		return time;
 	}
 
 	private String getTime(String rawMessage) {
@@ -47,13 +41,19 @@ public class Match {
 		return retVal;
 	}
 
+	/**
+	 * This may look weird, but the algorithm converts minutes to millis. eg 55:30 becomes
+	 * 55500mS
+	 */
 	private long parseTime(String timeString) {
 		String[] split = timeString.split(":");
-		long time = ((new Long(split[0]) * 60) + new Long(split[1])) * 10;
+		long minutes = (Long.valueOf(split[0]) * 1000);
+		long seconds = (Long.valueOf(split[1])) * 1000 / 60;
+		long time = minutes + seconds;
 		return time;
 	}
 
-	private String getMessageText(String rawMessage) {
+	private String getMessage(String rawMessage) {
 
 		int index = rawMessage.indexOf(' ');
 		String retVal = rawMessage.substring(index + 1);
